--- a/src/example/my_render/index.html
+++ b/src/example/my_render/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <div id="app"></div>
+  <form class="oi" id="form1">123</form>
+  <input type="text" form="form1">
 </body>
   <script src="./main.js" type="module"></script>
 </html>
